--- a/cadastro-novo-usuario/index.html
+++ b/cadastro-novo-usuario/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" /> <!-- TODO: ADICIONAR AQUI NOVO ICONE PARA NAVEGADOR -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Projeto Avaliativo - Disciplina Programação para Web II</title>
   </head>
   <body>
     <div id="root"></div>
