--- a/cadastro-novo-usuario/index.html
+++ b/cadastro-novo-usuario/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" /> <!-- TODO: ADICIONAR AQUI NOVO ICONE PARA NAVEGADOR -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto Avaliativo - Disciplina Programação para Web II</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Homenaje&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
